2004-10-07  Pascal Obry  <pascal@obry.org>

	* ssl_lib.gpr, crypto_lib.gpr:
	Import nossl project.

2004-10-06  Pascal Obry  <pascal@obry.org>

	* makefile:
	(clean): Remove ssl_shared.gpr.

2004-10-06  Pascal Obry  <pascal@obry.org>

	* makefile:
	(SSL_PATH1): New variable. Set only for non Windows OS.
	(SSL_PATH2): Idem.
	(setup): If SOCKET is std set LIB_Path to "" to disable library
	 creation. It could be the case that this library is not install
	 on the computer. On non Windows OS (and if SOCKET is ssl) set
	 LIB_Path to point to the right location (either SSL_PATH1 or
	 SSL_PATH2).

2004-10-02  Pascal Obry  <pascal@obry.org>

	* ssl_wrappers.ads, ssl_wrappers.adb:
	Was ssl-wrappers.

	* ssl-wrappers.ads, ssl-wrappers.adb:
	Renamed ssl_wrappers. This must be independant from the ssl
	 hierarchy as we can't have the same file (ssl.ads) part of
	 multiple project files.

	* nossl.gpr:
	Rename ssl-wrappers.adb to ssl_wrappers.adb. This wrapper must be
	 fully independant from the ssl hierarchy to satisfy project files
	 consistentcy check found in GNAT 5.03. Add ssl_wrappers.ads.

2004-10-02  Pascal Obry  <pascal@obry.org>

	* makefile:
	(setup_ssl): New target used to generate ssl_shared.gpr project
	 file. This file contains the default path to the libssl.a and
	 libcrypto.a external libraries.

	* crypto_lib.gpr, ssl_lib.gpr:
	Use SSL_Shared generated project file.

2004-10-02  Pascal Obry  <pascal@obry.org>

	* ssl_lib.gpr, crypto_lib.gpr:
	Initial revision.

	* ssl.gpr:
	Import the SSL external library project files ssl_lib and crypto_lib.

2004-09-29  Pascal Obry  <pascal@obry.org>

	* ssl.gpr:
	Minor casing fix.
	Update copyright notice.

	* nossl.gpr:
	Rename library "nosslaws" to "aws_nossl" for consistency.
	Update copyright notice.

	* makefile:
	Extensive changes to support build based on GNAT Project files.
	The makefile based build has been removed.

2004-09-29  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* ssl-wrappers.ads, ssl-wrappers.adb: